<resources>
    <string name="app_name">todoo-app</string>
    <string name="todoo">Todoo</string>
    <string name="intro_dashboard">Remember what\nyou should do</string>
    <string name="intro_dashboard_card">Hello, welcome to\nTODOO Application\nNice to see you! -NatashaEuklides-</string>
    <string name="choose_activity">Choose your activity</string>

    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="alarm">Alarm</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_alarm">Add Alarms</string>
    <string name="latest_tasks">Your latest tasks</string>

    <string name="title">Add Title</string>
    <string name="title2">Title</string>
    <string name="desc">Description</string>
    <string name="due_date">Due Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="create_new">Create New</string>
    <string name="cancel">Cancel</string>
    <string name="titleTV">What you wanna do?</string>
    <string name="descTV">Add the description here!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="new_notes">Create New Task!</string>
    <string name="update_delete">Update or Delete</string>
    <string name="choose_due_date">Choose your due date!</string>
    <string name="choose_due_time">Choose the time!</string>
    <string name="wanna_set_alarm">Wanna set an alarm?</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="detail_task">Your Detail Task</string>
    <string name="urgent_task">Urgent Tasks</string>
    <string name="important_task">Important Tasks</string>
    <string name="medium_task">Medium Tasks</string>
    <string name="low_task">Low Tasks</string>
    <string name="priority">Choose Task Priority</string>
    <string name="all_tasks">All Tasks</string>
    <string name="no_proximity">No Proximity Sensor</string>
    <string name="too_near">Too Near</string>
    <string name="far_away">Far Away</string>

    <string name="your_first_notes">Your First Notes</string>
    <string name="notes_1">Hey. . .\nWelcome to note!\nHere you can add text notes!\nStay in top of your game and never miss anything important!</string>
    <string name="notes_2">Grocery list</string>
    <string name="notes_3">This is shopping list for this month</string>
    <string name="notes_4">Recovery</string>
    <string name="notes_5">Hati yang gembira adalah obat</string>
    <string name="sound">Sound</string>
    
    <string name="alarm_time">07 : 21</string>
    <string name="alarm_day">02 / 04 / 2020</string>
    <string name="set_alarm_time">Set Time</string>
    <string name="set_alarm_date">Set Date</string>
</resources>
