<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/addTasksBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_tasks_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/toolbarBackImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tasksTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/dmsregular2"
                android:text="@string/add_tasks"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbarBackImageView"
                app:layout_constraintTop_toBottomOf="@+id/toolbarBackImageView" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="@color/alice_blue"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksTextView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/title"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/desc"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/titleCardView" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/due_date"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/textView"
                        app:layout_constraintTop_toBottomOf="@id/descCardView" />

                    <TextView
                        android:id="@+id/itemDueDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/dmsregular"
                        android:text="@string/choose_due_date"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@+id/datePickerButton"
                        app:layout_constraintStart_toStartOf="@id/textView"
                        app:layout_constraintTop_toBottomOf="@id/textView3" />

                    <TextView
                        android:id="@+id/itemDueTimeTextView"
                        android:layout_width="0dp"
                        android:layout_height="21dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/priority"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/textView"
                        app:layout_constraintTop_toBottomOf="@id/textView4" />

                    <TextView
                        android:id="@+id/taskPriorityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/itemDueTimeTextView"
                        app:layout_constraintStart_toEndOf="@+id/itemDueTimeTextView"
                        app:layout_constraintTop_toTopOf="@+id/itemDueTimeTextView" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/itemDueDateTextView"
                        app:layout_constraintTop_toBottomOf="@+id/itemDueDateTextView" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dmsregular2"
                        app:layout_constraintBottom_toBottomOf="@+id/spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/spinner"
                        app:layout_constraintTop_toTopOf="@+id/spinner" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/titleCardView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:padding="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        app:strokeColor="@color/brown_3"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/newTitleDoesEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/dmsregular"
                            android:hint="@string/titleTV"
                            android:inputType="textPersonName"
                            android:textSize="18sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/descCardView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:padding="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView2"
                        app:strokeColor="@color/brown_3"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/newDescDoesEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/dmsregular"
                            android:hint="@string/descTV"
                            android:inputType="textPersonName"
                            android:textSize="18sp" />

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/createNewButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/background_choose_date"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/create_new"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner" />

                    <Button
                        android:id="@+id/datePickerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/background_choose_date"
                        android:fontFamily="@font/dmsregular2"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/choose_date"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/itemDueDateTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/itemDueDateTextView"
                        tools:fontFamily="@font/dmsregular2" />

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/background_button_red"
                        android:fontFamily="@font/dmsregular2"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/createNewButton" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:prompt="@string/priority"
                        app:layout_constraintEnd_toStartOf="@id/textView5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/itemDueTimeTextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>